exports[`no-invalid-dom-token > invalid(1): element.classList.add(\"\", \"primary\"); 1`] = `

  1 | element.classList.add("", "primary");

`;

exports[`no-invalid-dom-token > invalid(1): element.classList.add(\"\", \"primary\"); 2`] = `

Message:
> 1 | element.classList.add("", "primary");
    |                       ^^ DOM tokens must not be empty.

`;

exports[`no-invalid-dom-token > invalid(10): element.classList.remove(\"primary\\tactive\", \"other\"); 1`] = `

  1 | element.classList.remove("primary\\tactive", "other");

`;

exports[`no-invalid-dom-token > invalid(10): element.classList.remove(\"primary\\tactive\", \"other\"); 2`] = `

Message:
> 1 | element.classList.remove("primary\\tactive", "other");
    |                          ^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.remove('primary', 'active', "other");

`;

exports[`no-invalid-dom-token > invalid(100): declare const state: {tokens: DOMTokenList}; state.tokens.remove(\"\"); 1`] = `

Filename: file.ts

  1 | declare const state: {tokens: DOMTokenList}; state.tokens.remove("");

`;

exports[`no-invalid-dom-token > invalid(100): declare const state: {tokens: DOMTokenList}; state.tokens.remove(\"\"); 2`] = `

Message:
> 1 | declare const state: {tokens: DOMTokenList}; state.tokens.remove("");
    |                                                                  ^^ DOM tokens must not be empty.

`;

exports[`no-invalid-dom-token > invalid(101): function update<T extends DOMTokenList>(tokens: T) { tokens.replace(\"primary\", \"old new\"); } 1`] = `

Filename: file.ts

  1 | function update<T extends DOMTokenList>(tokens: T) { tokens.replace("primary", "old new"); }

`;

exports[`no-invalid-dom-token > invalid(101): function update<T extends DOMTokenList>(tokens: T) { tokens.replace(\"primary\", \"old new\"); } 2`] = `

Message:
> 1 | function update<T extends DOMTokenList>(tokens: T) { tokens.replace("primary", "old new"); }
    |                                                                                ^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(102): declare const tokens: DOMTokenList | Set<string>; if (\"toggle\" in tokens) { tokens.add(\"primary active\"); } 1`] = `

Filename: file.ts

  1 | declare const tokens: DOMTokenList | Set<string>; if ("toggle" in tokens) { tokens.add("primary active"); }

`;

exports[`no-invalid-dom-token > invalid(102): declare const tokens: DOMTokenList | Set<string>; if (\"toggle\" in tokens) { tokens.add(\"primary active\"); } 2`] = `

Message:
> 1 | declare const tokens: DOMTokenList | Set<string>; if ("toggle" in tokens) { tokens.add("primary active"); }
    |                                                                                        ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | declare const tokens: DOMTokenList | Set<string>; if ("toggle" in tokens) { tokens.add('primary', 'active'); }

`;

exports[`no-invalid-dom-token > invalid(11): element.classList.remove(\"primary\\nactive\", \"other\"); 1`] = `

  1 | element.classList.remove("primary\\nactive", "other");

`;

exports[`no-invalid-dom-token > invalid(11): element.classList.remove(\"primary\\nactive\", \"other\"); 2`] = `

Message:
> 1 | element.classList.remove("primary\\nactive", "other");
    |                          ^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.remove('primary', 'active', "other");

`;

exports[`no-invalid-dom-token > invalid(12): element.classList.remove(\"primary\\factive\", \"other\"); 1`] = `

  1 | element.classList.remove("primary\\factive", "other");

`;

exports[`no-invalid-dom-token > invalid(12): element.classList.remove(\"primary\\factive\", \"other\"); 2`] = `

Message:
> 1 | element.classList.remove("primary\\factive", "other");
    |                          ^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.remove('primary', 'active', "other");

`;

exports[`no-invalid-dom-token > invalid(13): element.classList.remove(\"primary\\ractive\", \"other\"); 1`] = `

  1 | element.classList.remove("primary\\ractive", "other");

`;

exports[`no-invalid-dom-token > invalid(13): element.classList.remove(\"primary\\ractive\", \"other\"); 2`] = `

Message:
> 1 | element.classList.remove("primary\\ractive", "other");
    |                          ^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.remove('primary', 'active', "other");

`;

exports[`no-invalid-dom-token > invalid(14): element.classList.remove(\"primary active\", \"other\"); 1`] = `

  1 | element.classList.remove("primary active", "other");

`;

exports[`no-invalid-dom-token > invalid(14): element.classList.remove(\"primary active\", \"other\"); 2`] = `

Message:
> 1 | element.classList.remove("primary active", "other");
    |                          ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.remove('primary', 'active', "other");

`;

exports[`no-invalid-dom-token > invalid(15): element.classList.toggle(\"primary\\tactive\", \"other\"); 1`] = `

  1 | element.classList.toggle("primary\\tactive", "other");

`;

exports[`no-invalid-dom-token > invalid(15): element.classList.toggle(\"primary\\tactive\", \"other\"); 2`] = `

Message:
> 1 | element.classList.toggle("primary\\tactive", "other");
    |                          ^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(16): element.classList.toggle(\"primary\\nactive\", \"other\"); 1`] = `

  1 | element.classList.toggle("primary\\nactive", "other");

`;

exports[`no-invalid-dom-token > invalid(16): element.classList.toggle(\"primary\\nactive\", \"other\"); 2`] = `

Message:
> 1 | element.classList.toggle("primary\\nactive", "other");
    |                          ^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(17): element.classList.toggle(\"primary\\factive\", \"other\"); 1`] = `

  1 | element.classList.toggle("primary\\factive", "other");

`;

exports[`no-invalid-dom-token > invalid(17): element.classList.toggle(\"primary\\factive\", \"other\"); 2`] = `

Message:
> 1 | element.classList.toggle("primary\\factive", "other");
    |                          ^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(18): element.classList.toggle(\"primary\\ractive\", \"other\"); 1`] = `

  1 | element.classList.toggle("primary\\ractive", "other");

`;

exports[`no-invalid-dom-token > invalid(18): element.classList.toggle(\"primary\\ractive\", \"other\"); 2`] = `

Message:
> 1 | element.classList.toggle("primary\\ractive", "other");
    |                          ^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(19): element.classList.toggle(\"primary active\", \"other\"); 1`] = `

  1 | element.classList.toggle("primary active", "other");

`;

exports[`no-invalid-dom-token > invalid(19): element.classList.toggle(\"primary active\", \"other\"); 2`] = `

Message:
> 1 | element.classList.toggle("primary active", "other");
    |                          ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(2): element.classList.remove(\"\", \"primary\"); 1`] = `

  1 | element.classList.remove("", "primary");

`;

exports[`no-invalid-dom-token > invalid(2): element.classList.remove(\"\", \"primary\"); 2`] = `

Message:
> 1 | element.classList.remove("", "primary");
    |                          ^^ DOM tokens must not be empty.

`;

exports[`no-invalid-dom-token > invalid(20): element.classList.replace(\"primary\\tactive\", \"other\"); 1`] = `

  1 | element.classList.replace("primary\\tactive", "other");

`;

exports[`no-invalid-dom-token > invalid(20): element.classList.replace(\"primary\\tactive\", \"other\"); 2`] = `

Message:
> 1 | element.classList.replace("primary\\tactive", "other");
    |                           ^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(21): element.classList.replace(\"primary\\nactive\", \"other\"); 1`] = `

  1 | element.classList.replace("primary\\nactive", "other");

`;

exports[`no-invalid-dom-token > invalid(21): element.classList.replace(\"primary\\nactive\", \"other\"); 2`] = `

Message:
> 1 | element.classList.replace("primary\\nactive", "other");
    |                           ^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(22): element.classList.replace(\"primary\\factive\", \"other\"); 1`] = `

  1 | element.classList.replace("primary\\factive", "other");

`;

exports[`no-invalid-dom-token > invalid(22): element.classList.replace(\"primary\\factive\", \"other\"); 2`] = `

Message:
> 1 | element.classList.replace("primary\\factive", "other");
    |                           ^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(23): element.classList.replace(\"primary\\ractive\", \"other\"); 1`] = `

  1 | element.classList.replace("primary\\ractive", "other");

`;

exports[`no-invalid-dom-token > invalid(23): element.classList.replace(\"primary\\ractive\", \"other\"); 2`] = `

Message:
> 1 | element.classList.replace("primary\\ractive", "other");
    |                           ^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(24): element.classList.replace(\"primary active\", \"other\"); 1`] = `

  1 | element.classList.replace("primary active", "other");

`;

exports[`no-invalid-dom-token > invalid(24): element.classList.replace(\"primary active\", \"other\"); 2`] = `

Message:
> 1 | element.classList.replace("primary active", "other");
    |                           ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(25): element.relList.add(\"primary active\"); 1`] = `

  1 | element.relList.add("primary active");

`;

exports[`no-invalid-dom-token > invalid(25): element.relList.add(\"primary active\"); 2`] = `

Message:
> 1 | element.relList.add("primary active");
    |                     ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.relList.add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(26): element.sandbox.add(\"primary active\"); 1`] = `

  1 | element.sandbox.add("primary active");

`;

exports[`no-invalid-dom-token > invalid(26): element.sandbox.add(\"primary active\"); 2`] = `

Message:
> 1 | element.sandbox.add("primary active");
    |                     ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.sandbox.add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(27): element.part.add(\"primary active\"); 1`] = `

  1 | element.part.add("primary active");

`;

exports[`no-invalid-dom-token > invalid(27): element.part.add(\"primary active\"); 2`] = `

Message:
> 1 | element.part.add("primary active");
    |                  ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.part.add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(28): element.sizes.add(\"primary active\"); 1`] = `

  1 | element.sizes.add("primary active");

`;

exports[`no-invalid-dom-token > invalid(28): element.sizes.add(\"primary active\"); 2`] = `

Message:
> 1 | element.sizes.add("primary active");
    |                   ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.sizes.add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(29): element.blocking.add(\"primary active\"); 1`] = `

  1 | element.blocking.add("primary active");

`;

exports[`no-invalid-dom-token > invalid(29): element.blocking.add(\"primary active\"); 2`] = `

Message:
> 1 | element.blocking.add("primary active");
    |                      ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.blocking.add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(3): element.classList.toggle(\"\", \"primary\"); 1`] = `

  1 | element.classList.toggle("", "primary");

`;

exports[`no-invalid-dom-token > invalid(3): element.classList.toggle(\"\", \"primary\"); 2`] = `

Message:
> 1 | element.classList.toggle("", "primary");
    |                          ^^ DOM tokens must not be empty.

`;

exports[`no-invalid-dom-token > invalid(30): element.htmlFor.add(\"primary active\"); 1`] = `

  1 | element.htmlFor.add("primary active");

`;

exports[`no-invalid-dom-token > invalid(30): element.htmlFor.add(\"primary active\"); 2`] = `

Message:
> 1 | element.htmlFor.add("primary active");
    |                     ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.htmlFor.add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(31): element.controlsList.add(\"primary active\"); 1`] = `

  1 | element.controlsList.add("primary active");

`;

exports[`no-invalid-dom-token > invalid(31): element.controlsList.add(\"primary active\"); 2`] = `

Message:
> 1 | element.controlsList.add("primary active");
    |                          ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.controlsList.add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(32): element.classList.replace(\"primary\", \"\"); 1`] = `

  1 | element.classList.replace("primary", "");

`;

exports[`no-invalid-dom-token > invalid(32): element.classList.replace(\"primary\", \"\"); 2`] = `

Message:
> 1 | element.classList.replace("primary", "");
    |                                      ^^ DOM tokens must not be empty.

`;

exports[`no-invalid-dom-token > invalid(33): element.classList.replace(\"primary\", \"old new\"); 1`] = `

  1 | element.classList.replace("primary", "old new");

`;

exports[`no-invalid-dom-token > invalid(33): element.classList.replace(\"primary\", \"old new\"); 2`] = `

Message:
> 1 | element.classList.replace("primary", "old new");
    |                                      ^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(34): element.classList.replace(\"\", \"old new\"); 1`] = `

  1 | element.classList.replace("", "old new");

`;

exports[`no-invalid-dom-token > invalid(34): element.classList.replace(\"\", \"old new\"); 2`] = `

Message:
> 1 | element.classList.replace("", "old new");
    |                           ^^ DOM tokens must not be empty.

`;

exports[`no-invalid-dom-token > invalid(34): element.classList.replace(\"\", \"old new\"); 3`] = `

Message:
> 1 | element.classList.replace("", "old new");
    |                               ^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(35): element.classList.add(\"primary active\", \"\", \"old new\"); 1`] = `

  1 | element.classList.add("primary active", "", "old new");

`;

exports[`no-invalid-dom-token > invalid(35): element.classList.add(\"primary active\", \"\", \"old new\"); 2`] = `

Message:
> 1 | element.classList.add("primary active", "", "old new");
    |                       ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.add('primary', 'active', "", "old new");

`;

exports[`no-invalid-dom-token > invalid(35): element.classList.add(\"primary active\", \"\", \"old new\"); 3`] = `

Message:
> 1 | element.classList.add("primary active", "", "old new");
    |                                         ^^ DOM tokens must not be empty.

`;

exports[`no-invalid-dom-token > invalid(35): element.classList.add(\"primary active\", \"\", \"old new\"); 4`] = `

Message:
> 1 | element.classList.add("primary active", "", "old new");
    |                                             ^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.add("primary active", "", 'old', 'new');

`;

exports[`no-invalid-dom-token > invalid(36): element.classList.add(\" primary\"); 1`] = `

  1 | element.classList.add(" primary");

`;

exports[`no-invalid-dom-token > invalid(36): element.classList.add(\" primary\"); 2`] = `

Message:
> 1 | element.classList.add(" primary");
    |                       ^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.add('primary');

`;

exports[`no-invalid-dom-token > invalid(37): element.classList.remove(\"primary \"); 1`] = `

  1 | element.classList.remove("primary ");

`;

exports[`no-invalid-dom-token > invalid(37): element.classList.remove(\"primary \"); 2`] = `

Message:
> 1 | element.classList.remove("primary ");
    |                          ^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.remove('primary');

`;

exports[`no-invalid-dom-token > invalid(38): element.classList.add(\" \"); 1`] = `

  1 | element.classList.add(" ");

`;

exports[`no-invalid-dom-token > invalid(38): element.classList.add(\" \"); 2`] = `

Message:
> 1 | element.classList.add(" ");
    |                       ^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(39): element.classList.add(\"\\t\\n\\f\\r \"); 1`] = `

  1 | element.classList.add("\\t\\n\\f\\r ");

`;

exports[`no-invalid-dom-token > invalid(39): element.classList.add(\"\\t\\n\\f\\r \"); 2`] = `

Message:
> 1 | element.classList.add("\\t\\n\\f\\r ");
    |                       ^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(4): element.classList.replace(\"\", \"primary\"); 1`] = `

  1 | element.classList.replace("", "primary");

`;

exports[`no-invalid-dom-token > invalid(4): element.classList.replace(\"\", \"primary\"); 2`] = `

Message:
> 1 | element.classList.replace("", "primary");
    |                           ^^ DOM tokens must not be empty.

`;

exports[`no-invalid-dom-token > invalid(40): element.classList.add(\"primary\\u0020active\"); 1`] = `

  1 | element.classList.add("primary\\u0020active");

`;

exports[`no-invalid-dom-token > invalid(40): element.classList.add(\"primary\\u0020active\"); 2`] = `

Message:
> 1 | element.classList.add("primary\\u0020active");
    |                       ^^^^^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(41): element.classList.remove(\"primary\\x20active\"); 1`] = `

  1 | element.classList.remove("primary\\x20active");

`;

exports[`no-invalid-dom-token > invalid(41): element.classList.remove(\"primary\\x20active\"); 2`] = `

Message:
> 1 | element.classList.remove("primary\\x20active");
    |                          ^^^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.remove('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(42): element.classList.add(\`\`); 1`] = `

  1 | element.classList.add(\`\`);

`;

exports[`no-invalid-dom-token > invalid(42): element.classList.add(\`\`); 2`] = `

Message:
> 1 | element.classList.add(\`\`);
    |                       ^^ DOM tokens must not be empty.

`;

exports[`no-invalid-dom-token > invalid(43): element.classList.add(\`primary active\`); 1`] = `

  1 | element.classList.add(\`primary active\`);

`;

exports[`no-invalid-dom-token > invalid(43): element.classList.add(\`primary active\`); 2`] = `

Message:
> 1 | element.classList.add(\`primary active\`);
    |                       ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(44): element.classList.add(\`primary\nactive\`); 1`] = `

  1 | element.classList.add(\`primary
  2 | active\`);

`;

exports[`no-invalid-dom-token > invalid(44): element.classList.add(\`primary\nactive\`); 2`] = `

Message:
> 1 | element.classList.add(\`primary
    |                       ^^^^^^^^
> 2 | active\`);
    | ^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(45): element.classList.add(\`primary \${suffix}\`); 1`] = `

  1 | element.classList.add(\`primary \${suffix}\`);

`;

exports[`no-invalid-dom-token > invalid(45): element.classList.add(\`primary \${suffix}\`); 2`] = `

Message:
> 1 | element.classList.add(\`primary \${suffix}\`);
    |                       ^^^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(46): element.classList.add(\`\${prefix} active\`); 1`] = `

  1 | element.classList.add(\`\${prefix} active\`);

`;

exports[`no-invalid-dom-token > invalid(46): element.classList.add(\`\${prefix} active\`); 2`] = `

Message:
> 1 | element.classList.add(\`\${prefix} active\`);
    |                       ^^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(47): element.classList.add(\`\${prefix} \${suffix}\`); 1`] = `

  1 | element.classList.add(\`\${prefix} \${suffix}\`);

`;

exports[`no-invalid-dom-token > invalid(47): element.classList.add(\`\${prefix} \${suffix}\`); 2`] = `

Message:
> 1 | element.classList.add(\`\${prefix} \${suffix}\`);
    |                       ^^^^^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(48): element.classList.add(\`primary\\t\${suffix}\`); 1`] = `

  1 | element.classList.add(\`primary\\t\${suffix}\`);

`;

exports[`no-invalid-dom-token > invalid(48): element.classList.add(\`primary\\t\${suffix}\`); 2`] = `

Message:
> 1 | element.classList.add(\`primary\\t\${suffix}\`);
    |                       ^^^^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(49): element?.classList.add(\"primary active\"); 1`] = `

  1 | element?.classList.add("primary active");

`;

exports[`no-invalid-dom-token > invalid(49): element?.classList.add(\"primary active\"); 2`] = `

Message:
> 1 | element?.classList.add("primary active");
    |                        ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element?.classList.add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(5): element.classList.add(\"primary\\tactive\", \"other\"); 1`] = `

  1 | element.classList.add("primary\\tactive", "other");

`;

exports[`no-invalid-dom-token > invalid(5): element.classList.add(\"primary\\tactive\", \"other\"); 2`] = `

Message:
> 1 | element.classList.add("primary\\tactive", "other");
    |                       ^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.add('primary', 'active', "other");

`;

exports[`no-invalid-dom-token > invalid(50): element.classList?.add(\"primary active\"); 1`] = `

  1 | element.classList?.add("primary active");

`;

exports[`no-invalid-dom-token > invalid(50): element.classList?.add(\"primary active\"); 2`] = `

Message:
> 1 | element.classList?.add("primary active");
    |                        ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList?.add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(51): element.classList.add?.(\"primary active\"); 1`] = `

  1 | element.classList.add?.("primary active");

`;

exports[`no-invalid-dom-token > invalid(51): element.classList.add?.(\"primary active\"); 2`] = `

Message:
> 1 | element.classList.add?.("primary active");
    |                         ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.add?.('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(52): (element?.classList).add(\"primary active\"); 1`] = `

  1 | (element?.classList).add("primary active");

`;

exports[`no-invalid-dom-token > invalid(52): (element?.classList).add(\"primary active\"); 2`] = `

Message:
> 1 | (element?.classList).add("primary active");
    |                          ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | (element?.classList).add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(53): element[\"classList\"][\"add\"](\"primary active\"); 1`] = `

  1 | element["classList"]["add"]("primary active");

`;

exports[`no-invalid-dom-token > invalid(53): element[\"classList\"][\"add\"](\"primary active\"); 2`] = `

Message:
> 1 | element["classList"]["add"]("primary active");
    |                             ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element["classList"]["add"]('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(54): element[\`classList\`][\`remove\`](\"primary active\"); 1`] = `

  1 | element[\`classList\`][\`remove\`]("primary active");

`;

exports[`no-invalid-dom-token > invalid(54): element[\`classList\`][\`remove\`](\"primary active\"); 2`] = `

Message:
> 1 | element[\`classList\`][\`remove\`]("primary active");
    |                                ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element[\`classList\`][\`remove\`]('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(55): (element).classList.add((\"primary active\")); 1`] = `

  1 | (element).classList.add(("primary active"));

`;

exports[`no-invalid-dom-token > invalid(55): (element).classList.add((\"primary active\")); 2`] = `

Message:
> 1 | (element).classList.add(("primary active"));
    |                          ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | (element).classList.add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(56): element.classList.add(((\"primary active\"))); 1`] = `

  1 | element.classList.add((("primary active")));

`;

exports[`no-invalid-dom-token > invalid(56): element.classList.add(((\"primary active\"))); 2`] = `

Message:
> 1 | element.classList.add((("primary active")));
    |                         ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(57): element.classList.add(\"before\", \"primary active\", \"after\",); 1`] = `

  1 | element.classList.add("before", "primary active", "after",);

`;

exports[`no-invalid-dom-token > invalid(57): element.classList.add(\"before\", \"primary active\", \"after\",); 2`] = `

Message:
> 1 | element.classList.add("before", "primary active", "after",);
    |                                 ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.add("before", 'primary', 'active', "after",);

`;

exports[`no-invalid-dom-token > invalid(58): element.classList.add(\"primary active\", ...tokens); 1`] = `

  1 | element.classList.add("primary active", ...tokens);

`;

exports[`no-invalid-dom-token > invalid(58): element.classList.add(\"primary active\", ...tokens); 2`] = `

Message:
> 1 | element.classList.add("primary active", ...tokens);
    |                       ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.add('primary', 'active', ...tokens);

`;

exports[`no-invalid-dom-token > invalid(59): element.classList.remove(...tokens, \"primary active\"); 1`] = `

  1 | element.classList.remove(...tokens, "primary active");

`;

exports[`no-invalid-dom-token > invalid(59): element.classList.remove(...tokens, \"primary active\"); 2`] = `

Message:
> 1 | element.classList.remove(...tokens, "primary active");
    |                                     ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.remove(...tokens, 'primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(6): element.classList.add(\"primary\\nactive\", \"other\"); 1`] = `

  1 | element.classList.add("primary\\nactive", "other");

`;

exports[`no-invalid-dom-token > invalid(6): element.classList.add(\"primary\\nactive\", \"other\"); 2`] = `

Message:
> 1 | element.classList.add("primary\\nactive", "other");
    |                       ^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.add('primary', 'active', "other");

`;

exports[`no-invalid-dom-token > invalid(60): element.classList.replace(\"primary active\", ...tokens); 1`] = `

  1 | element.classList.replace("primary active", ...tokens);

`;

exports[`no-invalid-dom-token > invalid(60): element.classList.replace(\"primary active\", ...tokens); 2`] = `

Message:
> 1 | element.classList.replace("primary active", ...tokens);
    |                           ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(61): const token = \"primary active\"; element.classList.add(token); 1`] = `

  1 | const token = "primary active"; element.classList.add(token);

`;

exports[`no-invalid-dom-token > invalid(61): const token = \"primary active\"; element.classList.add(token); 2`] = `

Message:
> 1 | const token = "primary active"; element.classList.add(token);
    |                                                       ^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(62): const token = \"\"; element.classList.remove(token); 1`] = `

  1 | const token = ""; element.classList.remove(token);

`;

exports[`no-invalid-dom-token > invalid(62): const token = \"\"; element.classList.remove(token); 2`] = `

Message:
> 1 | const token = ""; element.classList.remove(token);
    |                                            ^^^^^ DOM tokens must not be empty.

`;

exports[`no-invalid-dom-token > invalid(63): const first = \"primary\"; const token = first + \" active\"; element.classList.add(token); 1`] = `

  1 | const first = "primary"; const token = first + " active"; element.classList.add(token);

`;

exports[`no-invalid-dom-token > invalid(63): const first = \"primary\"; const token = first + \" active\"; element.classList.add(token); 2`] = `

Message:
> 1 | const first = "primary"; const token = first + " active"; element.classList.add(token);
    |                                                                                 ^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(64): element.classList.add(\"primary\" + \" active\"); 1`] = `

  1 | element.classList.add("primary" + " active");

`;

exports[`no-invalid-dom-token > invalid(64): element.classList.add(\"primary\" + \" active\"); 2`] = `

Message:
> 1 | element.classList.add("primary" + " active");
    |                       ^^^^^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(65): const suffix = \"active\"; element.classList.add(\`primary \${suffix}\`); 1`] = `

  1 | const suffix = "active"; element.classList.add(\`primary \${suffix}\`);

`;

exports[`no-invalid-dom-token > invalid(65): const suffix = \"active\"; element.classList.add(\`primary \${suffix}\`); 2`] = `

Message:
> 1 | const suffix = "active"; element.classList.add(\`primary \${suffix}\`);
    |                                                ^^^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(66): const token = Object.freeze(\"primary active\"); element.classList.add(token); 1`] = `

  1 | const token = Object.freeze("primary active"); element.classList.add(token);

`;

exports[`no-invalid-dom-token > invalid(66): const token = Object.freeze(\"primary active\"); element.classList.add(token); 2`] = `

Message:
> 1 | const token = Object.freeze("primary active"); element.classList.add(token);
    |                                                                      ^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(67): element.classList.add(true ? \"primary active\" : \"primary\"); 1`] = `

  1 | element.classList.add(true ? "primary active" : "primary");

`;

exports[`no-invalid-dom-token > invalid(67): element.classList.add(true ? \"primary active\" : \"primary\"); 2`] = `

Message:
> 1 | element.classList.add(true ? "primary active" : "primary");
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(68): const view = <div>{element.classList.add(\"primary active\")}</div>; 1`] = `

  1 | const view = <div>{element.classList.add("primary active")}</div>;

`;

exports[`no-invalid-dom-token > invalid(68): const view = <div>{element.classList.add(\"primary active\")}</div>; 2`] = `

Message:
> 1 | const view = <div>{element.classList.add("primary active")}</div>;
    |                                          ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | const view = <div>{element.classList.add('primary', 'active')}</div>;

`;

exports[`no-invalid-dom-token > invalid(69): element.classList.add(/* before */ \"primary active\" /* after */); 1`] = `

  1 | element.classList.add(/* before */ "primary active" /* after */);

`;

exports[`no-invalid-dom-token > invalid(69): element.classList.add(/* before */ \"primary active\" /* after */); 2`] = `

Message:
> 1 | element.classList.add(/* before */ "primary active" /* after */);
    |                                    ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.add(/* before */ 'primary', 'active' /* after */);

`;

exports[`no-invalid-dom-token > invalid(7): element.classList.add(\"primary\\factive\", \"other\"); 1`] = `

  1 | element.classList.add("primary\\factive", "other");

`;

exports[`no-invalid-dom-token > invalid(7): element.classList.add(\"primary\\factive\", \"other\"); 2`] = `

Message:
> 1 | element.classList.add("primary\\factive", "other");
    |                       ^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.add('primary', 'active', "other");

`;

exports[`no-invalid-dom-token > invalid(70): element.classList.add((/* inside */ \"primary active\")); 1`] = `

  1 | element.classList.add((/* inside */ "primary active"));

`;

exports[`no-invalid-dom-token > invalid(70): element.classList.add((/* inside */ \"primary active\")); 2`] = `

Message:
> 1 | element.classList.add((/* inside */ "primary active"));
    |                                     ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(71): element.classList.add((\"primary active\" /* inside */)); 1`] = `

  1 | element.classList.add(("primary active" /* inside */));

`;

exports[`no-invalid-dom-token > invalid(71): element.classList.add((\"primary active\" /* inside */)); 2`] = `

Message:
> 1 | element.classList.add(("primary active" /* inside */));
    |                        ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(72): element.classList.add(\"primary's active\\\\name\"); 1`] = `

  1 | element.classList.add("primary's active\\\\name");

`;

exports[`no-invalid-dom-token > invalid(72): element.classList.add(\"primary's active\\\\name\"); 2`] = `

Message:
> 1 | element.classList.add("primary's active\\\\name");
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.add('primary\\'s', 'active\\\\name');

`;

exports[`no-invalid-dom-token > invalid(73): element.classList.add(\"primary active primary\"); 1`] = `

  1 | element.classList.add("primary active primary");

`;

exports[`no-invalid-dom-token > invalid(73): element.classList.add(\"primary active primary\"); 2`] = `

Message:
> 1 | element.classList.add("primary active primary");
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.add('primary', 'active', 'primary');

`;

exports[`no-invalid-dom-token > invalid(74): element.classList.add(\"primary\\u00A0active other\"); 1`] = `

  1 | element.classList.add("primary\\u00A0active other");

`;

exports[`no-invalid-dom-token > invalid(74): element.classList.add(\"primary\\u00A0active other\"); 2`] = `

Message:
> 1 | element.classList.add("primary\\u00A0active other");
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.add('primary active', 'other');

`;

exports[`no-invalid-dom-token > invalid(75): if (condition) {\n    element.classList.add(\"primary active\");\n} 1`] = `

  1 | if (condition) {
  2 |     element.classList.add("primary active");
  3 | }

`;

exports[`no-invalid-dom-token > invalid(75): if (condition) {\n    element.classList.add(\"primary active\");\n} 2`] = `

Message:
  1 | if (condition) {
> 2 |     element.classList.add("primary active");
    |                           ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.
  3 | }

Suggestion 1/1: Replace with separate tokens.:
  1 | if (condition) {
  2 |     element.classList.add('primary', 'active');
  3 | }

`;

exports[`no-invalid-dom-token > invalid(76): if (condition) {\r\n\telement.classList.add(\"primary active\");\r\n} 1`] = `

  1 | if (condition) {
  2 | 	element.classList.add("primary active");
  3 | }

`;

exports[`no-invalid-dom-token > invalid(76): if (condition) {\r\n\telement.classList.add(\"primary active\");\r\n} 2`] = `

Message:
  1 | if (condition) {
> 2 | 	element.classList.add("primary active");
    | 	                      ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.
  3 | }

Suggestion 1/1: Replace with separate tokens.:
  1 | if (condition) {
  2 | 	element.classList.add('primary', 'active');
  3 | }

`;

exports[`no-invalid-dom-token > invalid(77): element.classList.add(\"primary active\" as string); 1`] = `

  1 | element.classList.add("primary active" as string);

`;

exports[`no-invalid-dom-token > invalid(77): element.classList.add(\"primary active\" as string); 2`] = `

Message:
> 1 | element.classList.add("primary active" as string);
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(78): element.classList.add(<string>\"primary active\"); 1`] = `

  1 | element.classList.add(<string>"primary active");

`;

exports[`no-invalid-dom-token > invalid(78): element.classList.add(<string>\"primary active\"); 2`] = `

Message:
> 1 | element.classList.add(<string>"primary active");
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(79): element.classList.add(\"primary active\"!); 1`] = `

  1 | element.classList.add("primary active"!);

`;

exports[`no-invalid-dom-token > invalid(79): element.classList.add(\"primary active\"!); 2`] = `

Message:
> 1 | element.classList.add("primary active"!);
    |                       ^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(8): element.classList.add(\"primary\\ractive\", \"other\"); 1`] = `

  1 | element.classList.add("primary\\ractive", "other");

`;

exports[`no-invalid-dom-token > invalid(8): element.classList.add(\"primary\\ractive\", \"other\"); 2`] = `

Message:
> 1 | element.classList.add("primary\\ractive", "other");
    |                       ^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.add('primary', 'active', "other");

`;

exports[`no-invalid-dom-token > invalid(80): element.classList.add(\"primary active\" satisfies string); 1`] = `

  1 | element.classList.add("primary active" satisfies string);

`;

exports[`no-invalid-dom-token > invalid(80): element.classList.add(\"primary active\" satisfies string); 2`] = `

Message:
> 1 | element.classList.add("primary active" satisfies string);
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(81): (element as Element).classList.add(\"primary active\"); 1`] = `

  1 | (element as Element).classList.add("primary active");

`;

exports[`no-invalid-dom-token > invalid(81): (element as Element).classList.add(\"primary active\"); 2`] = `

Message:
> 1 | (element as Element).classList.add("primary active");
    |                                    ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | (element as Element).classList.add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(82): (element.classList as DOMTokenList).add(\"primary active\"); 1`] = `

  1 | (element.classList as DOMTokenList).add("primary active");

`;

exports[`no-invalid-dom-token > invalid(82): (element.classList as DOMTokenList).add(\"primary active\"); 2`] = `

Message:
> 1 | (element.classList as DOMTokenList).add("primary active");
    |                                         ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | (element.classList as DOMTokenList).add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(83): (element.classList.add as Function)(\"primary active\"); 1`] = `

  1 | (element.classList.add as Function)("primary active");

`;

exports[`no-invalid-dom-token > invalid(83): (element.classList.add as Function)(\"primary active\"); 2`] = `

Message:
> 1 | (element.classList.add as Function)("primary active");
    |                                     ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | (element.classList.add as Function)('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(84): element!.classList.add(\"primary active\"); 1`] = `

  1 | element!.classList.add("primary active");

`;

exports[`no-invalid-dom-token > invalid(84): element!.classList.add(\"primary active\"); 2`] = `

Message:
> 1 | element!.classList.add("primary active");
    |                        ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element!.classList.add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(85): element.classList!.add(\"primary active\"); 1`] = `

  1 | element.classList!.add("primary active");

`;

exports[`no-invalid-dom-token > invalid(85): element.classList!.add(\"primary active\"); 2`] = `

Message:
> 1 | element.classList!.add("primary active");
    |                        ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList!.add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(86): element.classList.add((\"primary active\" /* explanation */) as string); 1`] = `

  1 | element.classList.add(("primary active" /* explanation */) as string);

`;

exports[`no-invalid-dom-token > invalid(86): element.classList.add((\"primary active\" /* explanation */) as string); 2`] = `

Message:
> 1 | element.classList.add(("primary active" /* explanation */) as string);
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(87): element.classList.add(\`primary \${getSuffix()}\`); 1`] = `

  1 | element.classList.add(\`primary \${getSuffix()}\`);

`;

exports[`no-invalid-dom-token > invalid(87): element.classList.add(\`primary \${getSuffix()}\`); 2`] = `

Message:
> 1 | element.classList.add(\`primary \${getSuffix()}\`);
    |                       ^^^^^^^^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(88): const suffix = \" active\"; element.classList.add(\`primary\${suffix}\`); 1`] = `

  1 | const suffix = " active"; element.classList.add(\`primary\${suffix}\`);

`;

exports[`no-invalid-dom-token > invalid(88): const suffix = \" active\"; element.classList.add(\`primary\${suffix}\`); 2`] = `

Message:
> 1 | const suffix = " active"; element.classList.add(\`primary\${suffix}\`);
    |                                                 ^^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(89): const token = \"\"; element.classList.remove(\`\${token}\`); 1`] = `

  1 | const token = ""; element.classList.remove(\`\${token}\`);

`;

exports[`no-invalid-dom-token > invalid(89): const token = \"\"; element.classList.remove(\`\${token}\`); 2`] = `

Message:
> 1 | const token = ""; element.classList.remove(\`\${token}\`);
    |                                            ^^^^^^^^^^ DOM tokens must not be empty.

`;

exports[`no-invalid-dom-token > invalid(9): element.classList.add(\"primary active\", \"other\"); 1`] = `

  1 | element.classList.add("primary active", "other");

`;

exports[`no-invalid-dom-token > invalid(9): element.classList.add(\"primary active\", \"other\"); 2`] = `

Message:
> 1 | element.classList.add("primary active", "other");
    |                       ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | element.classList.add('primary', 'active', "other");

`;

exports[`no-invalid-dom-token > invalid(90): const token = \"primary active\" as const; element.classList.add(token); 1`] = `

  1 | const token = "primary active" as const; element.classList.add(token);

`;

exports[`no-invalid-dom-token > invalid(90): const token = \"primary active\" as const; element.classList.add(token); 2`] = `

Message:
> 1 | const token = "primary active" as const; element.classList.add(token);
    |                                                                ^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(91): (element?.[\"classList\"] as DOMTokenList)?.[\"add\"]?.((\"primary active\" satisfies string)!); 1`] = `

  1 | (element?.["classList"] as DOMTokenList)?.["add"]?.(("primary active" satisfies string)!);

`;

exports[`no-invalid-dom-token > invalid(91): (element?.[\"classList\"] as DOMTokenList)?.[\"add\"]?.((\"primary active\" satisfies string)!); 2`] = `

Message:
> 1 | (element?.["classList"] as DOMTokenList)?.["add"]?.(("primary active" satisfies string)!);
    |                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | (element?.["classList"] as DOMTokenList)?.["add"]?.('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(92): element.classList.add(\"\\\n\"); 1`] = `

  1 | element.classList.add("\\
  2 | ");

`;

exports[`no-invalid-dom-token > invalid(92): element.classList.add(\"\\\n\"); 2`] = `

Message:
> 1 | element.classList.add("\\
    |                       ^^
> 2 | ");
    | ^ DOM tokens must not be empty.

`;

exports[`no-invalid-dom-token > invalid(93): function update(tokens: DOMTokenList) { tokens.add(\"primary active\", \"other\"); } 1`] = `

Filename: file.ts

  1 | function update(tokens: DOMTokenList) { tokens.add("primary active", "other"); }

`;

exports[`no-invalid-dom-token > invalid(93): function update(tokens: DOMTokenList) { tokens.add(\"primary active\", \"other\"); } 2`] = `

Message:
> 1 | function update(tokens: DOMTokenList) { tokens.add("primary active", "other"); }
    |                                                    ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | function update(tokens: DOMTokenList) { tokens.add('primary', 'active', "other"); }

`;

exports[`no-invalid-dom-token > invalid(94): function update(tokens: DOMTokenList) { tokens.remove(\"primary active\", \"other\"); } 1`] = `

Filename: file.ts

  1 | function update(tokens: DOMTokenList) { tokens.remove("primary active", "other"); }

`;

exports[`no-invalid-dom-token > invalid(94): function update(tokens: DOMTokenList) { tokens.remove(\"primary active\", \"other\"); } 2`] = `

Message:
> 1 | function update(tokens: DOMTokenList) { tokens.remove("primary active", "other"); }
    |                                                       ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | function update(tokens: DOMTokenList) { tokens.remove('primary', 'active', "other"); }

`;

exports[`no-invalid-dom-token > invalid(95): function update(tokens: DOMTokenList) { tokens.toggle(\"primary active\", \"other\"); } 1`] = `

Filename: file.ts

  1 | function update(tokens: DOMTokenList) { tokens.toggle("primary active", "other"); }

`;

exports[`no-invalid-dom-token > invalid(95): function update(tokens: DOMTokenList) { tokens.toggle(\"primary active\", \"other\"); } 2`] = `

Message:
> 1 | function update(tokens: DOMTokenList) { tokens.toggle("primary active", "other"); }
    |                                                       ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(96): function update(tokens: DOMTokenList) { tokens.replace(\"primary active\", \"other\"); } 1`] = `

Filename: file.ts

  1 | function update(tokens: DOMTokenList) { tokens.replace("primary active", "other"); }

`;

exports[`no-invalid-dom-token > invalid(96): function update(tokens: DOMTokenList) { tokens.replace(\"primary active\", \"other\"); } 2`] = `

Message:
> 1 | function update(tokens: DOMTokenList) { tokens.replace("primary active", "other"); }
    |                                                        ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

`;

exports[`no-invalid-dom-token > invalid(97): const tokens = document.body.classList; tokens.add(\"primary active\"); 1`] = `

Filename: file.ts

  1 | const tokens = document.body.classList; tokens.add("primary active");

`;

exports[`no-invalid-dom-token > invalid(97): const tokens = document.body.classList; tokens.add(\"primary active\"); 2`] = `

Message:
> 1 | const tokens = document.body.classList; tokens.add("primary active");
    |                                                    ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | const tokens = document.body.classList; tokens.add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(98): declare const tokens: DOMTokenList | undefined; tokens?.add(\"primary active\"); 1`] = `

Filename: file.ts

  1 | declare const tokens: DOMTokenList | undefined; tokens?.add("primary active");

`;

exports[`no-invalid-dom-token > invalid(98): declare const tokens: DOMTokenList | undefined; tokens?.add(\"primary active\"); 2`] = `

Message:
> 1 | declare const tokens: DOMTokenList | undefined; tokens?.add("primary active");
    |                                                             ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | declare const tokens: DOMTokenList | undefined; tokens?.add('primary', 'active');

`;

exports[`no-invalid-dom-token > invalid(99): declare const tokens: unknown; (tokens as DOMTokenList).add(\"primary active\"); 1`] = `

Filename: file.ts

  1 | declare const tokens: unknown; (tokens as DOMTokenList).add("primary active");

`;

exports[`no-invalid-dom-token > invalid(99): declare const tokens: unknown; (tokens as DOMTokenList).add(\"primary active\"); 2`] = `

Message:
> 1 | declare const tokens: unknown; (tokens as DOMTokenList).add("primary active");
    |                                                             ^^^^^^^^^^^^^^^^ DOM tokens must not contain ASCII whitespace.

Suggestion 1/1: Replace with separate tokens.:
  1 | declare const tokens: unknown; (tokens as DOMTokenList).add('primary', 'active');

`;
